Bug 284052 - kde daemon crash
Summary: kde daemon crash
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth-daemon (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
: 291344 292420 293507 296085 296575 297270 298070 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-15 07:40 UTC by Philip
Modified: 2012-04-27 20:47 UTC (History)
15 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.02 KB, text/plain)
2012-01-26 09:45 UTC, Alexander
Details
New crash information added by DrKonqi (6.43 KB, text/plain)
2012-02-01 16:05 UTC, Bruno Friedmann
Details
New crash information added by DrKonqi (6.40 KB, text/plain)
2012-02-13 19:14 UTC, Bruno Friedmann
Details
New crash information added by DrKonqi (5.98 KB, text/plain)
2012-03-29 15:28 UTC, Emil Sedgh
Details
New crash information added by DrKonqi (4.80 KB, text/plain)
2012-04-01 06:56 UTC, kavol
Details
valgrind log of kded4 (164.02 KB, application/x-gzip)
2012-04-25 22:04 UTC, Lamarque V. Souza
Details
crashlog (not that usefull) (6.61 KB, application/octet-stream)
2012-04-25 22:06 UTC, Lamarque V. Souza
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philip 2011-10-15 07:40:36 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.7.2 (4.7.2) "release 9"
Qt Version: 4.7.4
Operating System: Linux 3.0.3-1-desktop x86_64
Distribution: "openSUSE 11.4 (x86_64)"

-- Information about the crash:
when desktop is just idle

The crash can be reproduced some of the time.

-- Backtrace:
Application: KDE Daemon (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f89b91e7760 (LWP 1734))]

Thread 2 (Thread 0x7f899b6ea700 (LWP 1769)):
#0  0x00007f89b7ad8710 in pthread_mutex_unlock () from /lib64/libpthread.so.0
#1  0x00007f89b367f07a in g_main_context_prepare () from /lib64/libglib-2.0.so.0
#2  0x00007f89b367ffa9 in ?? () from /lib64/libglib-2.0.so.0
#3  0x00007f89b3680650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#4  0x00007f89b7e79636 in QEventDispatcherGlib::processEvents (this=0x7ce280, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007f89b7e4dc22 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f89b7e4de35 in QEventLoop::exec (this=0x7f899b6e9de0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007f89b7d62be4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:498
#8  0x00007f89b7e2f358 in QInotifyFileSystemWatcherEngine::run (this=0x7ab6e0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f89b7d654d5 in QThreadPrivate::start (arg=0x7ab6e0) at thread/qthread_unix.cpp:331
#10 0x00007f89b7ad4a3f in start_thread () from /lib64/libpthread.so.0
#11 0x00007f89b688466d in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f89b91e7760 (LWP 1734)):
[KCrash Handler]
#6  0x00007f89b7e60180 in QObject::property (this=0x88d260, name=0x7f89b4c65870 "_qdbus_slotCache") at kernel/qobject.cpp:3459
#7  0x00007f89b4c2a7bc in QDBusConnectionPrivate::activateCall (this=0x84dcd0, object=0x88d260, flags=273, msg=...) at qdbusintegrator.cpp:802
#8  0x00007f89b4c2b36e in QDBusConnectionPrivate::activateObject (this=0x84dcd0, node=..., msg=..., pathStartPos=<value optimized out>) at qdbusintegrator.cpp:1410
#9  0x00007f89b4c2b5a8 in QDBusActivateObjectEvent::placeMetaCall (this=0x7f9f60) at qdbusintegrator.cpp:1524
#10 0x00007f89b7e627aa in QObject::event (this=0x8527e0, e=<value optimized out>) at kernel/qobject.cpp:1226
#11 0x00007f89b6ff4264 in QApplicationPrivate::notify_helper (this=0x690220, receiver=0x8527e0, e=0x7f9f60) at kernel/qapplication.cpp:4481
#12 0x00007f89b6ffc81a in QApplication::notify (this=<value optimized out>, receiver=0x8527e0, e=0x7f9f60) at kernel/qapplication.cpp:4360
#13 0x00007f89b8bd9ae6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#14 0x00007f89b7e4e7cc in QCoreApplication::notifyInternal (this=0x7fff01dab540, receiver=0x8527e0, event=0x7f9f60) at kernel/qcoreapplication.cpp:787
#15 0x00007f89b7e51fc5 in sendEvent (receiver=0x0, event_type=0, data=0x615a70) at kernel/qcoreapplication.h:215
#16 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x615a70) at kernel/qcoreapplication.cpp:1428
#17 0x00007f89b7e79443 in sendPostedEvents (s=<value optimized out>) at kernel/qcoreapplication.h:220
#18 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#19 0x00007f89b367fbd3 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#20 0x00007f89b36803b0 in ?? () from /lib64/libglib-2.0.so.0
#21 0x00007f89b3680650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#22 0x00007f89b7e795df in QEventDispatcherGlib::processEvents (this=0x617cf0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#23 0x00007f89b709a1ae in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#24 0x00007f89b7e4dc22 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#25 0x00007f89b7e4de35 in QEventLoop::exec (this=0x7fff01dab490, flags=...) at kernel/qeventloop.cpp:201
#26 0x00007f89b7e5227b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#27 0x00007f89a8867837 in kdemain () from /usr/lib64/libkdeinit4_kded4.so
#28 0x0000000000407279 in _start ()

Reported using DrKonqi
Comment 1 Christoph Feck 2011-10-15 11:55:17 UTC
Are you using Network Manager? If yes, you could try disabling the networking related modules in System Settings, as described in http://kdepepo.wordpress.com/2011/05/11/troubleshooting-kded4-bugs/

Otherwise, a different module might cause the crash. Following the steps from the above link, you can isolate the offending module. This information is required for identifying the problem.
Comment 2 Lamarque V. Souza 2012-01-12 11:07:20 UTC
*** Bug 291344 has been marked as a duplicate of this bug. ***
Comment 3 Alexander 2012-01-26 09:45:17 UTC
Created attachment 68189 [details]
New crash information added by DrKonqi

kded4 ($Id$) on KDE Platform 4.8.00 (4.8.0 "release 462" using Qt 4.8.0

- What I was doing when the application crashed:
Logging in after suspend. After the login the crash manager appeared, this happens some times since I've installed KDE 4.8

-- Backtrace (Reduced):
#6  0x00007ff5767b5c90 in QObject::property (this=0x856cf0, name=0x7ff573533510 "_qdbus_slotCache") at kernel/qobject.cpp:3750
#7  0x00007ff5734f3d19 in QDBusConnectionPrivate::activateCall (this=0x858010, object=0x856cf0, flags=273, msg=...) at qdbusintegrator.cpp:807
#8  0x00007ff5734f4a9b in QDBusConnectionPrivate::activateObject (this=0x858010, node=..., msg=..., pathStartPos=<optimized out>) at qdbusintegrator.cpp:1423
#9  0x00007ff5734f4b8b in QDBusActivateObjectEvent::placeMetaCall (this=0x84ac40) at qdbusintegrator.cpp:1537
#10 0x00007ff5767bc926 in QObject::event (this=0x896540, e=<optimized out>) at kernel/qobject.cpp:1204
Comment 4 Christoph Feck 2012-01-26 15:47:15 UTC
*** Bug 292420 has been marked as a duplicate of this bug. ***
Comment 5 Bruno Friedmann 2012-02-01 16:05:05 UTC
Created attachment 68405 [details]
New crash information added by DrKonqi

kded4 ($Id$) on KDE Platform 4.8.00 (4.8.0 "release 462" using Qt 4.8.0

- What I was doing when the application crashed:
Battery emtpy the system suspend correctly, Then I plug the power, wake up the computer okay. 
The screensaver open (I've the analog clock on it) with the login box. But there's not background at that time.
I open the session at get the crash reporting dialog box. But the rest of the session is here, and all plasma related is running too.

-- Backtrace (Reduced):
#6  0x00007f2e1483fc90 in QObject::property (this=0x92f200, name=0x7f2e115bd510 "_qdbus_slotCache") at kernel/qobject.cpp:3750
#7  0x00007f2e1157dd19 in QDBusConnectionPrivate::activateCall (this=0x96a5a0, object=0x92f200, flags=273, msg=...) at qdbusintegrator.cpp:807
#8  0x00007f2e1157ea9b in QDBusConnectionPrivate::activateObject (this=0x96a5a0, node=..., msg=..., pathStartPos=<optimized out>) at qdbusintegrator.cpp:1423
#9  0x00007f2e1157eb8b in QDBusActivateObjectEvent::placeMetaCall (this=0xb721e0) at qdbusintegrator.cpp:1537
#10 0x00007f2e14846926 in QObject::event (this=0x9311c0, e=<optimized out>) at kernel/qobject.cpp:1204
Comment 6 Raymond Wooninck 2012-02-07 09:44:42 UTC
*** Bug 293507 has been marked as a duplicate of this bug. ***
Comment 7 Raymond Wooninck 2012-02-07 09:50:33 UTC
This morning I created another bugreport as that the initial backtrace for this bug was different then mine. (I reported it using the drkonqi crash reporter). However reading through this bug report, it seems that the crash I experience is equal to this one. 

As I indicated in my original bugreport, is that I have noticed that having BlueDevil active as a service seems to cause the crash. Please note that it is not necessary to have active bluetooth connections for the system to crash. 

If I stop and deactivate the bluedevil service from running, then I can resume my laptop from sleep without any crashes and everything runs normal. If bluedevil is active, I receive a crash every time I resume from a sleep. With me Network Management plasmoid is active, but I am not sure if Network Management is somehow changed by having bluedevil active (just running, no active Bluetooth connections).
Comment 8 Christoph Feck 2012-02-07 12:39:27 UTC
Thanks for the update. Reassigning to bluetooth developers for further inspection.
Comment 9 Bruno Friedmann 2012-02-13 19:14:07 UTC
Created attachment 68768 [details]
New crash information added by DrKonqi

kded4 ($Id$) on KDE Platform 4.8.00 (4.8.0 "release 2" using Qt 4.8.0

- What I was doing when the application crashed: a kde 4.8.0 (opensuse 12.1 KR48 repository) I suspend the computer will wifi + bluetooth on (but no connection) 
The only active connection during the suspend was a wired one (mono ipv4)

For the wake up, it was on a wired connection too, ipv4 + ipv6. Immediately after unlocking the screen the crash occurs.

-- Backtrace (Reduced):
#6  0x00007f42d806ac90 in QObject::property (this=0x93d320, name=0x7f42d4de8510 "_qdbus_slotCache") at kernel/qobject.cpp:3750
#7  0x00007f42d4da8d19 in QDBusConnectionPrivate::activateCall (this=0x976e40, object=0x93d320, flags=273, msg=...) at qdbusintegrator.cpp:807
#8  0x00007f42d4da9a9b in QDBusConnectionPrivate::activateObject (this=0x976e40, node=..., msg=..., pathStartPos=<optimized out>) at qdbusintegrator.cpp:1423
#9  0x00007f42d4da9b8b in QDBusActivateObjectEvent::placeMetaCall (this=0xc1c8a0) at qdbusintegrator.cpp:1537
#10 0x00007f42d8071926 in QObject::event (this=0x93fac0, e=<optimized out>) at kernel/qobject.cpp:1204
Comment 10 Jekyll Wu 2012-03-23 10:09:35 UTC
*** Bug 296575 has been marked as a duplicate of this bug. ***
Comment 11 Emil Sedgh 2012-03-29 15:28:16 UTC
Created attachment 69994 [details]
New crash information added by DrKonqi

kded4 ($Id$) on KDE Platform 4.8.1 (4.8.1) using Qt 4.8.1

- What I was doing when the application crashed:
Unsuspended. Happens every time. My Bluedevil kded is stopped, though.
I use NetworkManager.

-- Backtrace (Reduced):
#6  0x00007f5eab2dca2c in QObject::thread (this=0x1b66ce0) at kernel/qobject.cpp:1371
#7  0x00007f5eab6a0476 in QDBusConnectionPrivate::activateCall (this=0x1b5b830, object=0x1b66ce0, flags=273, msg=...) at qdbusintegrator.cpp:802
#8  0x00007f5eab6a4b90 in QDBusConnectionPrivate::activateObject (this=0x1b5b830, node=..., msg=..., pathStartPos=16) at qdbusintegrator.cpp:1423
#9  0x00007f5eab6a5501 in QDBusActivateObjectEvent::placeMetaCall (this=0x7f5e8c012af0) at qdbusintegrator.cpp:1537
#10 0x00007f5eab2dc59d in QObject::event (this=0x1b665e0, e=0x7f5e8c012af0) at kernel/qobject.cpp:1195
Comment 12 kavol 2012-04-01 06:56:53 UTC
Created attachment 70047 [details]
New crash information added by DrKonqi

kded4 ($Id$) on KDE Platform 4.8.1 (4.8.1) using Qt 4.8.0

- What I was doing when the application crashed:

the same as comment #11 - it crashes on wakeup, seems reproducible (nearly?) always
wifi used, no bluetooth

-- Backtrace (Reduced):
#6  0x00007f7abbcb4cc2 in QObject::property (this=0x9d55c0, name=0x7f7abc05a3d0 "_qdbus_slotCache") at kernel/qobject.cpp:3741
#7  0x00007f7abc01cc8c in QDBusConnectionPrivate::activateCall (this=this@entry=0x9d1d60, object=0x9d55c0, flags=flags@entry=273, msg=...) at qdbusintegrator.cpp:807
#8  0x00007f7abc01d966 in QDBusConnectionPrivate::activateObject (this=0x9d1d60, node=..., msg=..., pathStartPos=<optimized out>) at qdbusintegrator.cpp:1423
#9  0x00007f7abc01da5b in QDBusActivateObjectEvent::placeMetaCall (this=0xb73730) at qdbusintegrator.cpp:1537
#10 0x00007f7abbcb70ee in QObject::event (this=0x9e08d0, e=<optimized out>) at kernel/qobject.cpp:1195
Comment 13 Rex Dieter 2012-04-10 15:14:58 UTC
enough dups (and I can easily reproduce), confirmed.
Comment 14 Rex Dieter 2012-04-10 15:15:05 UTC
*** Bug 297270 has been marked as a duplicate of this bug. ***
Comment 15 Rex Dieter 2012-04-10 15:40:17 UTC
I can confirm removing or disabling the bluedevil kded module makes crashes go away.

$rpm -q bluedevil
bluedevil-1.3-0.2.rc1.fc17.x86_64
Comment 16 Rex Dieter 2012-04-10 15:59:15 UTC
And some good news, reverting to bluedevil-1.2.2 build ... I can no longer reproduce this crash.  So, seems particular to the 1.3 branch.
Comment 17 Jekyll Wu 2012-04-13 20:50:13 UTC
*** Bug 298070 has been marked as a duplicate of this bug. ***
Comment 18 Lamarque V. Souza 2012-04-18 00:11:00 UTC
*** Bug 296085 has been marked as a duplicate of this bug. ***
Comment 19 Martin Bříza 2012-04-24 15:11:54 UTC
This bug is also filed in Fedora as https://bugzilla.redhat.com/show_bug.cgi?id=794955 reported during KDE Plasma Workspaces Test Day.
Comment 20 Lamarque V. Souza 2012-04-25 22:04:24 UTC
Created attachment 70657 [details]
valgrind log of kded4

Log showing where the crash happens for me.
Comment 21 Lamarque V. Souza 2012-04-25 22:06:37 UTC
Created attachment 70658 [details]
crashlog (not that usefull)

Here is the crashlog, it does not show where the cause of the crash happens.
Comment 22 Alex Fiestas 2012-04-26 01:58:26 UTC
Git commit 744ff9bb65162db0ed3f07d5dc0166a20c46f136 by Alex Fiestas.
Committed on 26/04/2012 at 04:46.
Pushed by afiestas into branch 'master'.

Set a new Object as parent of BlueZAgent

You can't register a child of a parent exposed with ExportChildObjects, if
you do so the app may crash.

for not making this patch too big I'm using the parent() reference from
the BlueAgent object itself to delete the parent and this will delete
the agent.  I will improve it in BlueDevil 2.0

Versions minor to 1.3 are not affected by this bug since they use qApp
as a parent instead of BlueDevilDAemon.

M  +2    -2    src/daemon/kded/BlueDevilDaemon.cpp
M  +1    -1    src/daemon/kded/bluezagent.cpp

http://commits.kde.org/bluedevil/744ff9bb65162db0ed3f07d5dc0166a20c46f136
Comment 23 Raymond Wooninck 2012-04-27 19:31:32 UTC
I can confirm that with the current git master, the KDED crash is no longer appearing.
Comment 24 Alex Fiestas 2012-04-27 20:47:36 UTC
Thanks Ryamond ! really glad this is finally fixed